fix(PaginationHeader): there was uneven margin at the bottom of the PaginationHeader

--- a/src/components/Pagination/PaginationHeader/PaginationHeader.styles.scss
+++ b/src/components/Pagination/PaginationHeader/PaginationHeader.styles.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 3rem;
 
     div {
         background-color: #fff;
